--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/MoyuActivityTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".LoginActivity"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -30,12 +30,16 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".MainActivity" />
         <activity android:name=".PasswordActivity" />
         <activity android:name=".RegistActivity" />
         <activity android:name=".ContentActivity" />
         <activity android:name=".MoyuActivity" />
-        <activity android:name=".MyActivity"></activity>
+        <activity android:name=".MyActivity" />
+        <activity android:name=".MessageActivity" />
+        <activity android:name=".SearchActivity" />
+        <activity android:name=".EditActivity" />
+        <activity android:name=".PostActivity"></activity>
     </application>
 
 </manifest>
