--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,7 +39,8 @@
         <activity android:name=".MessageActivity" />
         <activity android:name=".SearchActivity" />
         <activity android:name=".EditActivity" />
-        <activity android:name=".PostActivity"></activity>
+        <activity android:name=".PostActivity" />
+        <activity android:name=".CommentActivity"></activity>
     </application>
 
 </manifest>
