--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,8 +40,8 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
 
-    compile 'com.squareup.okhttp3:okhttp:3.9.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    compile 'com.squareup.okhttp3:okhttp:3.9.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
 
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -55,5 +55,7 @@ dependencies {
     compile 'org.litepal.android:core:1.6.0'
     compile 'commons-codec:commons-codec:1.10'
     compile 'com.google.code.gson:gson:2.8.1'
+    compile 'com.github.YancyYe:GalleryPick:1.2.1'
+
     testCompile 'junit:junit:4.12'
 }
