--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,8 +5,8 @@ android {
     buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.example.moyutest"
-        minSdkVersion 19
-        targetSdkVersion 25
+        minSdkVersion 18
+        targetSdkVersion 21
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -16,6 +16,8 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+    }
+    productFlavors {
     }
 }
 repositories {
@@ -30,32 +32,29 @@ dependencies {
     })
     compile files('libs/SQLiteStudioRemote.jar')
     compile name: 'SMSSDK-3.0.0', ext: 'aar'
-
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
-
     compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-
     compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
-
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     compile 'io.reactivex.rxjava2:rxjava:2.1.5'
-
     compile 'com.squareup.okhttp3:okhttp:3.9.1'
     compile 'com.squareup.okhttp3:logging-interceptor:3.9.1'
-
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
     compile 'de.hdodenhof:circleimageview:2.1.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
-    compile 'com.github.bumptech.glide:glide:4.0.0'
+    compile 'com.github.bumptech.glide:glide:4.3.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.3.0'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3./1'
     compile 'org.litepal.android:core:1.6.0'
     compile 'commons-codec:commons-codec:1.10'
     compile 'com.google.code.gson:gson:2.8.1'
     compile 'com.github.YancyYe:GalleryPick:1.2.1'
-
+    compile 'com.jude:easyrecyclerview:4.4.2'
+    compile 'com.github.NaikSoftware:StompProtocolAndroid:1.1.1'
+    compile 'org.java-websocket:Java-WebSocket:1.3.0'
     testCompile 'junit:junit:4.12'
 }
